--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ h5py
 matplotlib
 numpy
 open3d==0.9 # if you're on newer versions of python / mamba / conda, installing may throw an error. installing latest open3d seems to work 
-opencv-python
+opencv
 pyyaml
 scipy
 tensorboardX
