--- a/cfgs/dataset_configs/crown.yaml
+++ b/cfgs/dataset_configs/crown.yaml
@@ -1,5 +1,5 @@
 NAME: crown
 CATEGORY_FILE_PATH: data/crown/crown.json
 N_POINTS: 16384
-PARTIAL_POINTS_PATH: data/crown/partial/%s.ply
-COMPLETE_POINTS_PATH: data/crown/complete/%s.ply
+PARTIAL_POINTS_PATH: data/crown/partial/%s
+COMPLETE_POINTS_PATH: data/crown/complete/%s
