fix dataset loading issue due to input data not the same size

--- a/cfgs/dataset_configs/crown.yaml
+++ b/cfgs/dataset_configs/crown.yaml
@@ -3,3 +3,4 @@ CATEGORY_FILE_PATH: data/crown/crown.json
 N_POINTS: 16384
 PARTIAL_POINTS_PATH: data/crown/partial/%s
 COMPLETE_POINTS_PATH: data/crown/complete/%s
+CARS: FALSE
